FIX: gap do conteudo de home

--- a/src/components/styles/styleHome.module.scss
+++ b/src/components/styles/styleHome.module.scss
@@ -2,7 +2,7 @@
 @use './mixins/variables.module.scss' as variable;
 
 .sectionHome{
-    @include mixins.flex($direction: column, $justify: center, $align: center, $gap: 1rem);
+    @include mixins.flex($direction: column, $justify: center, $align: center);
     height: 94vh;
     border: solid red;
     overflow: hidden;
@@ -31,7 +31,7 @@
 .content{
     position: relative;
     z-index: 1;
-    @include mixins.flex($direction: column, $justify: center, $align: center, $gap: 1rem);
+    @include mixins.flex($direction: column, $justify: center, $align: center, $gap: 10rem);
 }
 
 .span{
